--- a/experiment/exp.ipynb
+++ b/experiment/exp.ipynb
@@ -2,8 +2,162 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e6a074e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import traceback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4f890b76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a5401730",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Devesh\\\\Downloads\\\\mcqgenerator\\\\project\\\\python.exe'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.executable\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3800dd55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key=os.getenv(\"Open_api_key\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "07150377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "508e4f40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2212e410",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Devesh\\Downloads\\mcqgenerator\\experiment\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1dccf60f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API KEY: 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\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "env_path = r\"C:\\Users\\Devesh\\Downloads\\mcqgenerator\\.env\"\n",
+    "load_dotenv(dotenv_path=env_path, override=True)\n",
+    "\n",
+    "print(\"API KEY:\", os.getenv(\"OPENAI_API_KEY\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "40c76801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b8dbba7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    temperature=0.5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeb6c16a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -16,7 +170,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.19"
   }
  },
